# mathematical

./: .gitignore  README.md  out.jld2  pyproject.toml  test.json
.virtual_documents/math/statistics/statistics/py_stats/: Untitled.ipynb.py
gaussian_process/gaussian_process2/: gp2.md
gaussian_process/gaussian_process2/fig/GP_py/: fig_kernel.py  gp_reg.py  kernel.py
math/ml/XAI/: intepretability_svm.py
math/musurable/: mesurable.md
math/statistics/: README.md
math/statistics/kubokawa/: section1.md  section2.md
math/statistics/statistics/julia_stats/: Manifest.toml  Project.toml
math/statistics/statistics/julia_stats/images/: compare_aic_bic_st.jl
math/statistics/statistics/julia_stats/notebooks/: intro_bayesian_stats.ipynb
math/statistics/statistics/julia_stats/src/: compare_exp.jl  julia_stats.jl  test.jl  test2.jl  test3.jl
math/statistics/statistics/py_stats/: Untitled.ipynb
