[tool.poetry]
name = "base_python_env"
version = "0.1.0"
description = "base line of python environment"
authors = ["daikichiba9511 <daikichiba.hokkaido@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
numpy = "^1.19.0"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"
scipy = "^1.5.1"
plotly = "^4.8.2"
cufflinks = "^0.17.3"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
jupyterlab = "^2.2.0"
pytest = "^5.4.3"
nodejs = "^0.1.1"
jupyter = "^1.0.0"
jupytext = "^1.5.1"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
jupyterlab_code_formatter = "^1.3.4"
autopep8 = "^1.5.3"
black = "^19.10b0"
jupyter-lsp = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
